docs: updated docs to reflect latest version

--- a/packages/docs/mkdocs.yml
+++ b/packages/docs/mkdocs.yml
@@ -1,8 +1,7 @@
 site_name: Insurance Fraud Detection
 site_description: PySpark-based fraud detection system for insurance claims
-site_author: Your Name
-repo_url: https://github.com/your-org/insurance-fraud
-repo_name: insurance-fraud
+repo_url: https://github.com/caveraio/insurance-fraud-detection
+repo_name: insurance-fraud-detection
 
 theme:
   name: material
@@ -95,4 +94,4 @@ nav:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/your-org/insurance-fraud
+      link: https://github.com/caveraio/insurance-fraud-detection
