fix: configure mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,12 +97,15 @@ exclude = [
     "__pycache__",
     "\\.pyc$",
     "packages/docs/",
+    "node_modules/",
+    "cdk\\.out/",
+    "conftest\\.py$",
 ]
 
 [tool.pytest.ini_options]
 testpaths = ["packages/fraud_detection/tests", "packages/infra/tests"]
 pythonpath = ["."]
-addopts = "-v --cov=packages/fraud_detection/src/fraud_detection --cov=packages/infra/src/infra --cov-report=term-missing --cov-fail-under=100"
+addopts = "-v --import-mode=importlib --cov=packages/fraud_detection/src/fraud_detection --cov=packages/infra/src/infra --cov-report=term-missing --cov-fail-under=100"
 
 [tool.coverage.run]
 omit = [
